[package]
name = "rptagfs-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
fuse3 = { version = "0.9", features = ["tokio-runtime", "unprivileged"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
futures-util = "0.3"
bytes = "1"

[dev-dependencies]
tempfile = "3"
